--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ version: 1.0.0+1
 environment:
   sdk: ^3.5.1
 
+
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -46,6 +47,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  simple_barcode_scanner: ^0.0.8
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
