--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  blue_thermal_printer: ^1.2.3
 
   # Add the intl package here
   intl: ^0.18.0  # (or use the latest version available on pub.dev)
